Correctly hide top-bar on small screens.

--- a/src/assets/scss/modules/_navigation.scss
+++ b/src/assets/scss/modules/_navigation.scss
@@ -6,6 +6,7 @@
 }
 
 .desktop-menu,
+.site-navigation.top-bar,
 .site-navigation .top-bar-left {
   @include show-for(medium);
 }
